--- a/demo/index.html
+++ b/demo/index.html
@@ -1,14 +1,204 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ASScroll</title>
 </head>
+
 <body>
 
+    <div id="scroll-container">
+        <div style="max-width: 25%">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras lacus dui, porttitor finibus massa sed,
+                posuere aliquet dui. Proin at turpis consectetur, vestibulum velit vitae, blandit turpis. Maecenas
+                vulputate sapien id massa lacinia convallis. Maecenas viverra, velit at tincidunt posuere, est tellus
+                facilisis purus, non dignissim turpis justo quis augue. Aenean eget sem sit amet ante suscipit iaculis
+                et vel sapien. Pellentesque vitae dignissim ipsum. Maecenas euismod, mi et eleifend ullamcorper, ipsum
+                nulla sollicitudin nibh, at pellentesque erat velit eget ex. Quisque sit amet maximus quam. Aliquam at
+                mauris sed lorem suscipit ultrices. Donec vitae eros vehicula, convallis ipsum sed, vehicula erat.
+            </p>
+            <p>
+                Cras sed mattis sem. Quisque dictum est quis feugiat tristique. Cras venenatis sed ante at viverra. Ut
+                hendrerit nunc in enim tristique, et elementum lacus tincidunt. Suspendisse eget lobortis magna. Quisque
+                facilisis id dui at finibus. Etiam convallis non arcu ut aliquet. Sed vel eros finibus, dictum tortor
+                vitae, viverra odio. Curabitur eu interdum elit, eget egestas enim. Cras convallis rutrum nibh.
+                Curabitur accumsan sed lectus eget efficitur. Nam tristique massa metus, quis fringilla risus imperdiet
+                a.
+            </p>
+            <p>
+                Proin ut lacinia neque. Nullam tempus, tortor eget ultricies posuere, libero risus eleifend risus, id
+                auctor orci diam et magna. Etiam quis placerat neque. Etiam suscipit neque non ex venenatis vehicula.
+                Cras in cursus sapien, sed rutrum ipsum. Ut tempus pulvinar leo ac viverra. Etiam scelerisque velit
+                diam, a vestibulum nibh dictum quis. Donec consequat bibendum metus non bibendum. Maecenas sed libero
+                lectus. Curabitur blandit gravida turpis id tristique. Nulla facilisi. Nunc ac elit interdum, congue
+                enim sit amet, egestas lacus.
+            </p>
+            <p>
+                Phasellus facilisis arcu velit. Duis egestas, erat quis feugiat pharetra, lectus leo hendrerit arcu,
+                quis suscipit nibh risus ut nibh. Vestibulum lacinia blandit nibh ac egestas. Nam varius diam eu nibh
+                commodo tincidunt. Quisque non luctus metus, quis aliquet massa. Sed tortor ex, mollis a urna
+                condimentum, dapibus fermentum elit. Suspendisse justo nisl, efficitur a ante laoreet, hendrerit dictum
+                leo. Nunc non rhoncus nisl, eget sagittis est. Ut commodo sapien sit amet leo placerat, non vehicula
+                quam consectetur. Donec quam tellus, consectetur id nibh sit amet, porttitor tempor libero. Phasellus
+                vel odio quis arcu imperdiet dignissim. Donec quis lorem eleifend, bibendum turpis sit amet, egestas
+                ligula. Integer tristique, nunc a suscipit rutrum, neque leo dignissim lacus, ut cursus lacus nunc sed
+                eros. Donec odio nunc, condimentum vel egestas in, blandit id dolor.
+            </p>
+            <p>
+                Phasellus vitae tristique diam. Morbi a dui in purus tristique pretium et vitae neque. Ut sollicitudin
+                augue felis, a rhoncus mi commodo at. Sed sollicitudin odio at gravida maximus. Ut metus dui, iaculis
+                vitae placerat et, pharetra a felis. Nulla facilisi. Nulla convallis non mi euismod venenatis. Nunc quam
+                arcu, accumsan eu ex in, cursus blandit tortor. In fermentum, risus rutrum tristique interdum, eros
+                nulla condimentum sapien, in dictum nisi nulla ut risus. Quisque id mi ac dolor iaculis rhoncus ut ut
+                ligula.
+            </p>
+            <p>
+                Cras posuere convallis dolor, eget consequat mauris tempus et. Maecenas at ligula vulputate, cursus dui
+                quis, laoreet massa. Curabitur nec nisi non felis pellentesque tristique. Nulla eget efficitur felis.
+                Duis vel erat molestie, congue diam non, maximus orci. Nullam pellentesque justo auctor nibh volutpat,
+                quis laoreet nibh euismod. Phasellus vehicula vulputate purus ac tristique. Vivamus vel sapien et nulla
+                iaculis lobortis rutrum at justo. Pellentesque sit amet tellus pellentesque, posuere felis sed,
+                consectetur justo. Morbi et commodo sem.
+            </p>
+            <p>
+                Quisque fringilla est et turpis ullamcorper dictum. Nulla auctor aliquet consectetur. Quisque tristique
+                mauris vel eleifend blandit. Duis lobortis magna leo. Praesent tristique, elit vitae dignissim molestie,
+                mi lacus dignissim ipsum, at laoreet sapien ex a ligula. Suspendisse vitae finibus sapien, et
+                consectetur nisl. Fusce ullamcorper sit amet arcu ac porttitor. Ut fermentum vehicula pretium. Nunc nec
+                ex at tortor eleifend sollicitudin quis in enim.
+            </p>
+            <p>
+                Donec blandit ex magna, et commodo dui sollicitudin sed. Praesent congue vehicula ante, quis tempor
+                neque cursus vel. Fusce volutpat varius odio eget semper. Integer nec iaculis felis, non ultricies arcu.
+                Curabitur ut magna bibendum, vestibulum libero ut, mollis nibh. Cras egestas dui convallis ex luctus, eu
+                sodales diam elementum. Etiam dapibus, lorem a hendrerit scelerisque, massa nisi imperdiet justo,
+                sollicitudin ullamcorper enim felis non nunc. Sed volutpat turpis at ante luctus, in vehicula enim
+                venenatis. Praesent sed congue turpis.
+            </p>
+            <p>
+                Sed hendrerit justo eget eleifend eleifend. Aenean tortor libero, posuere in venenatis at, ultricies id
+                tellus. Curabitur fermentum odio facilisis, semper nibh non, pellentesque ipsum. Cras pretium vestibulum
+                eros, eget tincidunt ligula porttitor et. Nunc nec ex neque. Donec ante tortor, malesuada non diam a,
+                condimentum efficitur turpis. Vivamus dignissim est in nisi semper, ac condimentum eros suscipit.
+                Suspendisse quis lorem dolor. Nunc id arcu augue. Sed porta libero varius rutrum hendrerit. In hac
+                habitasse platea dictumst. Nunc sed odio rutrum, scelerisque lectus vel, molestie libero. Vivamus id
+                gravida ex, ac luctus eros. Vivamus diam diam, feugiat quis libero id, accumsan aliquet ipsum.
+            </p>
+            <p>
+                Etiam sit amet magna nulla. Curabitur sit amet neque nec felis luctus faucibus. Etiam faucibus dictum
+                purus, vel tempor diam fringilla vitae. Aenean at elementum justo, luctus ultrices enim. Sed dignissim
+                mauris non mauris rhoncus, nec facilisis quam faucibus. Suspendisse aliquet turpis vitae risus
+                malesuada, sit amet dapibus ipsum sollicitudin. Vivamus semper mi ac velit commodo, eu mollis purus
+                suscipit.
+            </p>
+            <p>
+                Phasellus faucibus bibendum erat rhoncus porttitor. Sed vel tempor purus. Nulla tempor dignissim tempus.
+                Aenean id libero at odio pharetra ultricies vel sit amet nunc. Aliquam elit dui, hendrerit eu odio id,
+                egestas molestie diam. Nunc commodo lacus vitae sem finibus, a vulputate nulla dapibus. Nam tortor
+                tortor, rutrum ac aliquet aliquam, aliquet ac dui. In non sollicitudin purus. Etiam viverra, quam eget
+                sagittis tincidunt, tortor dui blandit metus, ac pharetra risus eros sed nisi. Ut laoreet nulla nec urna
+                hendrerit auctor. Proin eleifend urna lorem, consequat condimentum mi molestie quis.
+            </p>
+            <p>
+                Donec vestibulum ultrices magna, in maximus metus ullamcorper vitae. Sed porta condimentum urna vel
+                sollicitudin. Mauris eget massa ex. Nullam laoreet ipsum ultricies, viverra elit a, pretium lacus.
+                Nullam id libero non elit vehicula tempor non vitae nibh. Fusce ultrices tempor faucibus. Nullam non
+                justo a enim sodales mollis vel in lectus. Proin pharetra mauris vel libero dictum, sit amet imperdiet
+                sapien accumsan. Mauris vitae libero venenatis, vulputate leo et, bibendum sapien. Class aptent taciti
+                sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aliquam pretium tellus massa, ac
+                suscipit felis pellentesque a. Etiam congue ex libero, nec blandit nunc consectetur vitae. Praesent eu
+                metus ac tellus posuere luctus non vel augue. Phasellus sed tristique erat. Vivamus nunc enim, dapibus a
+                commodo ut, aliquet ac erat. Donec lorem erat, posuere eu feugiat non, elementum quis orci.
+            </p>
+            <p>
+                Phasellus accumsan leo ac dui fringilla convallis. Fusce commodo iaculis est nec pellentesque.
+                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Curabitur
+                ut ultricies ante, at pulvinar massa. Suspendisse molestie quam eu dapibus mattis. Duis pulvinar enim
+                sit amet neque iaculis, ac cursus massa pulvinar. Duis ornare faucibus placerat. Sed mattis enim quam,
+                ut maximus ipsum fermentum in. Donec posuere arcu sed erat sodales, nec maximus elit euismod. Fusce
+                vitae felis sit amet tortor condimentum porttitor id pharetra nisi. Nunc porttitor est eu odio faucibus,
+                eu imperdiet augue vulputate.
+            </p>
+            <p>
+                Mauris scelerisque est vitae nibh cursus, ut pellentesque enim rhoncus. Nullam tempor odio nec dictum
+                faucibus. Donec ante mauris, scelerisque quis luctus fermentum, feugiat nec eros. Sed ultricies ut ipsum
+                sit amet posuere. Suspendisse potenti. Morbi sodales lobortis ex, sed malesuada neque rhoncus quis.
+                Proin quis risus ac nisl hendrerit imperdiet. Donec eu justo vel dui cursus consequat non sed leo. Sed
+                commodo iaculis dignissim.
+            </p>
+            <p>
+                Cras aliquam sit amet est vel pretium. Phasellus in quam luctus, vestibulum quam at, feugiat quam. Duis
+                euismod molestie sodales. Integer accumsan consectetur ligula et bibendum. Proin commodo nulla id
+                ultrices dictum. Sed eu vehicula ligula, ac fringilla est. Fusce quis neque faucibus, malesuada est
+                malesuada, lobortis ipsum. Etiam vehicula, turpis in fringilla pharetra, elit sapien elementum lacus, in
+                egestas eros ex eget leo. Maecenas nec egestas orci. Pellentesque eleifend convallis cursus.
+            </p>
+            <p>
+                Suspendisse purus ante, rutrum in scelerisque at, porttitor eu neque. Donec ligula felis, dictum eget
+                aliquet sed, fringilla vitae dolor. Ut egestas consectetur mi, at maximus ante venenatis ac. Nam nec
+                nunc vitae lacus venenatis egestas eget et felis. Integer semper ultricies erat, at suscipit lorem
+                eleifend id. Duis venenatis massa dapibus mi tempor, tincidunt finibus nulla accumsan. Nullam id nulla
+                eu massa tempor maximus at a nulla.
+            </p>
+            <p>
+                Sed viverra aliquam augue nec feugiat. Maecenas non turpis tincidunt, gravida tortor eget, hendrerit
+                turpis. Nullam erat ligula, aliquet eu justo ac, tempus pellentesque risus. In id ante in purus suscipit
+                pulvinar. Maecenas quis urna ante. Vivamus eget velit bibendum, sagittis nulla eget, dignissim ante. Sed
+                sodales accumsan sem id sodales. Suspendisse non urna a neque porttitor mattis. Fusce eu rhoncus erat.
+                Pellentesque auctor varius ante sollicitudin hendrerit. Pellentesque sapien quam, pretium vehicula
+                vehicula et, semper maximus erat. Etiam eget leo vitae arcu rhoncus faucibus eu a dui. Nullam eget
+                pulvinar massa. Praesent placerat augue vitae ligula fringilla scelerisque.
+            </p>
+            <p>
+                Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Duis eget felis
+                ante. Nullam scelerisque viverra nibh, a varius justo accumsan et. Class aptent taciti sociosqu ad
+                litora torquent per conubia nostra, per inceptos himenaeos. Donec erat sem, pellentesque id massa vitae,
+                hendrerit porttitor felis. Cras in sapien quis nisl pellentesque blandit. Sed auctor nibh non cursus
+                vehicula.
+            </p>
+            <p>
+                Mauris sed blandit nibh. Morbi elementum volutpat est eu porta. Vivamus ut lectus sed lacus elementum
+                semper eget eget orci. Praesent posuere ligula sapien. Phasellus efficitur nisl est, ac scelerisque leo
+                scelerisque eu. Morbi porttitor congue nisl in luctus. Quisque porta blandit ligula vehicula bibendum.
+            </p>
+            <p>
+                Sed vitae tellus non purus vehicula porta eget eget nisl. Maecenas ligula erat, sollicitudin in maximus
+                at, commodo et nunc. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus
+                mus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+                Suspendisse in convallis dui. Nunc placerat egestas quam id viverra. Pellentesque in diam iaculis,
+                fringilla elit eget, dignissim mi. Vivamus eget feugiat mi. Nulla a auctor dolor, nec maximus ante. Sed
+                faucibus sapien a est bibendum, sit amet posuere mauris ultrices. Mauris non pellentesque lorem, vel
+                rhoncus ipsum. Quisque tempus sollicitudin nulla, tincidunt volutpat velit scelerisque et. Sed et ornare
+                est. Vivamus ut risus tristique, luctus ante quis, fringilla orci.
+            </p>
+            <p>
+                Mauris sed pellentesque odio. Mauris sit amet neque felis. Mauris dolor felis, sodales sit amet eleifend
+                luctus, dignissim ut magna. Nam dui nibh, facilisis ac consequat id, faucibus lacinia ante. Maecenas vel
+                massa lacinia, scelerisque arcu scelerisque, porttitor libero. Praesent nec lacus nibh. Mauris ut
+                elementum risus, quis molestie massa. Mauris vulputate finibus ipsum. Curabitur blandit dolor ex. Mauris
+                sit amet facilisis mi. In a velit ut risus ornare auctor. Nunc viverra accumsan augue, finibus aliquam
+                ante condimentum eget.
+            </p>
+            <p>
+                Maecenas vestibulum, mi a sodales pellentesque, odio magna consectetur nisi, eu varius justo ligula id
+                quam. Maecenas dignissim nulla vestibulum hendrerit sagittis. Donec scelerisque at arcu ut cursus. Donec
+                feugiat sem ipsum, sit amet ultricies quam facilisis nec. Aliquam egestas metus quam, ullamcorper
+                venenatis dui ultricies a. Cras vulputate posuere nibh ut pharetra. Mauris nec ornare ligula. Vestibulum
+                sed ante vel nunc scelerisque porttitor.
+            </p>
+        </div>
+    </div>
+    <div id="scrollbar">
+        <div>
+            <div id="scrollbar__bar"></div>
+        </div>
+    </div>
     <script type="text/javascript" src="build.js"></script>
-    
+
 </body>
+
 </html>
