--- a/demo/index.html
+++ b/demo/index.html
@@ -192,10 +192,7 @@
             </p>
         </div>
     </div>
-    <div id="scrollbar">
-        <div>
-            <div id="scrollbar__bar"></div>
-        </div>
+    <div id="scrollbar"><div><div id="scrollbar__handle"></div></div>
     </div>
     <script type="text/javascript" src="build.js"></script>
 
