--- a/demo/index.html
+++ b/demo/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <div id="scroll-container">
+    <div class="asscroll-container">
         <div style="max-width: 25%">
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras lacus dui, porttitor finibus massa sed,
@@ -192,7 +192,7 @@
             </p>
         </div>
     </div>
-    <div id="scrollbar"><div><div id="scrollbar__handle"></div></div>
+    <div class="asscrollbar"><div><div class="asscrollbar__handle"></div></div>
     </div>
     <script type="text/javascript" src="build.js"></script>
 
